# task-manager

./: Makefile  Procfile  README.md  pyproject.toml  requirements.txt  setup.cfg
labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
locale/en/LC_MESSAGES/: django.po
statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
task_manager/: settings.py  urls.py  views.py
task_manager/fixtures/: labels.yaml  statuses.yaml  tasks.yaml
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
templates/: base.html  index.html
templates/include/: footer.html  nav.html
templates/labels/: create.html  delete.html  list.html  update.html
templates/statuses/: create.html  delete.html  list.html  update.html
templates/tasks/: create.html  delete.html  detail.html  list.html  update.html
templates/users/: create.html  delete.html  list.html  sign_in.html  update.html
users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
users/fixtures/: users.yaml
users/migrations/: 0001_initial.py
