[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Project \"Tasks manager\""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
python-dotenv = "^1.0.0"
dj-database-url = "^1.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
