[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = ["Maks Mishin <maks.mishinFZ@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]
repository = "https://github.com/maks-mishin/python-django-developer-project-52"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
python-dotenv = "^1.0.0"
dj-database-url = "^1.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
django-extensions = "^3.2.1"
ipython = "^8.12.0"
pytest = "^7.2.2"
rollbar = "^0.16.3"
whitenoise = "^6.4.0"
django-bootstrap4 = "^22.3"
django-filter = "^23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
